--- a/html/products2.html
+++ b/html/products2.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="../css/style2.css"  type="text/css"/>
+    <link rel="stylesheet" href="../css/products.css"  type="text/css"/>
     <title>Products 2</title>
 </head>
 
